# KugouAndroidMusic

./: .gitmodules  README.md  build.gradle.kts  get_contributor_user_info.py  gradle.properties  package.properties  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  extract_node_version.py  proguard-rules.pro
app/release/: output-metadata.json
app/schemas/com.ghhccghk.musicplay.util.AppDatabase/: 1.json  2.json
app/schemas/com.ghhccghk.musicplay.util.UrlDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  node.h
app/src/main/cpp/node/cppgc/: common.h
app/src/main/cpp/v8/cppgc/: common.h
app/src/main/res/anim/: fragment_enter.xml  fragment_exit.xml  fragment_pop_enter.xml  fragment_pop_exit.xml  slide_in_left.xml  slide_in_right.xml  slide_out_left.xml  slide_out_right.xml
app/src/main/res/drawable/: ic_hq.xml  play_bar_rounded_corner.xml  search_bar_background.xml
app/src/main/res/layout/: activity_main.xml  contributor_item.xml  fragment_dashboard.xml  fragment_home.xml  fragment_login_password.xml  fragment_login_phone.xml  fragment_login_qr.xml  fragment_lyrics.xml  fragment_notifications.xml  fragment_player.xml  fragment_playlist.xml  fragment_playlist_tag.xml  fragment_top_settings.xml  fragment_user.xml  item_group_card.xml  item_inputphone.xml  item_keyword.xml  item_loading.xml  item_lyric_line.xml  (+6 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hificore/: build.gradle.kts  proguard-rules.pro
hificore/src/main/cpp/: CMakeLists.txt
(+227 files in other folders)
